added navbar and js for burger

--- a/index.html
+++ b/index.html
@@ -1,15 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Best Place To Keep Track of Your Savings and Investments</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
 </head>
-<body>
-    
-<!--Navbar-->
 
-<script src="indexjs"></script>
+<body>
+    <section>
+        <!--Navbar-->
+        <nav class="navbar">
+            <!--logo/brand-->
+            <div class="navbar-brand">
+                <a class="navbar-item" href="#">
+                    <img src="https://res.cloudinary.com/muneer/image/upload/v1611830293/Screenshot_2020-10-14_at_01.41.14.png"
+                        alt="logo" style="max-height:100px">
+                </a>
+                <a class="navbar-burger" id="burger">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </a>
+            </div>
+            <div class="navbar-menu" id="nav-links">
+                <div class="navbar-start">
+                    <a href="" class="navbar-item">Plan</a>
+                    <a href="" class="navbar-item">Track Finances</a>
+                    <a href="" class="navbar-item">Blog(soon)</a>
+                </div>
+                <div class="navbar-end">
+                    <a href="" class="navbar-item">Login</a>
+                    <a href="" class="navbar-item">Sign Up</a>
+                </div>
+            </div>
+        </nav>
+    </section>
+
+    <script src="index.js"></script>
 </body>
+
 </html>
