--- a/index.html
+++ b/index.html
@@ -5,39 +5,59 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Best Place To Keep Track of Your Savings and Investments</title>
+    <link rel="icon" href="https://res.cloudinary.com/muneer/image/upload/v1611830293/Screenshot_2020-10-14_at_01.41.14.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
+    <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
-    <section>
+    <section class="section background-1">
         <!--Navbar-->
-        <nav class="navbar">
+        <nav class="navbar is-transparent remove-background">
             <!--logo/brand-->
             <div class="navbar-brand">
                 <a class="navbar-item" href="#">
                     <img src="https://res.cloudinary.com/muneer/image/upload/v1611830293/Screenshot_2020-10-14_at_01.41.14.png"
                         alt="logo" style="max-height:100px">
                 </a>
-                <a class="navbar-burger" id="burger">
+                <a class="navbar-burger has-text-white" id="burger">
                     <span></span>
                     <span></span>
                     <span></span>
                 </a>
             </div>
-            <div class="navbar-menu" id="nav-links">
-                <div class="navbar-start">
-                    <a href="" class="navbar-item">Plan</a>
-                    <a href="" class="navbar-item">Track Finances</a>
-                    <a href="" class="navbar-item">Blog(soon)</a>
-                </div>
+            <div class="navbar-menu " id="nav-links">
                 <div class="navbar-end">
-                    <a href="" class="navbar-item">Login</a>
-                    <a href="" class="navbar-item">Sign Up</a>
+                    <a href="" class="navbar-item has-text-white">Plan</a>
+                    <a href="" class="navbar-item has-text-white">Track Finances</a>
+                    <a href="" class="navbar-item has-text-white">Blog(soon)</a>
+                    <a href="" class="navbar-item has-text-white">Login</a>
+                    <a href="" class="navbar-item has-text-white">Sign Up</a>
                 </div>
             </div>
         </nav>
     </section>
+    <!--call to action-->
+    <section class="section background-1">
+        <div class="columns is-vcentered">
+            <div class="column is-4-desktop">
+                <h3>Get your finances in order</h3>
+                <p>With amazing tools and articles on finance, savefy is the best way to secure your financial future</p>
+                <button class="button">Sign Up Now</button>
+            </div>
+            <div class="column ml is-6-desktop">
+                <!--svg-->
+                <img src="https://res.cloudinary.com/muneer/image/upload/v1611830231/undraw_wallet_aym5.svg" alt="finance wallet">
+            </div>
+        </div>
+       
+    </section>
+     <!--services-->
+    <section class="section">
+        <div>
 
+        </div>
+    </section>
     <script src="index.js"></script>
 </body>
 
