update landing page

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Best Place To Keep Track of Your Savings and Investments</title>
-    <link rel="icon" href="https://res.cloudinary.com/muneer/image/upload/v1611830293/Screenshot_2020-10-14_at_01.41.14.png">
+    <link rel="icon"
+        href="https://res.cloudinary.com/muneer/image/upload/v1611830293/Screenshot_2020-10-14_at_01.41.14.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
     <link rel="stylesheet" href="main.css">
 </head>
@@ -28,35 +29,84 @@
             </div>
             <div class="navbar-menu " id="nav-links">
                 <div class="navbar-end">
-                    <a href="" class="navbar-item has-text-white">Plan</a>
-                    <a href="" class="navbar-item has-text-white">Track Finances</a>
-                    <a href="" class="navbar-item has-text-white">Blog(soon)</a>
-                    <a href="" class="navbar-item has-text-white">Login</a>
-                    <a href="" class="navbar-item has-text-white">Sign Up</a>
+                    <a href="" class="navbar-item text-white has-text-weight-medium">Plan</a>
+                    <a href="" class="navbar-item text-white has-text-weight-medium">Track Finances</a>
+                    <a href="" class="navbar-item text-white has-text-weight-medium">Blog(soon)</a>
+                    <a href="" class="navbar-item text-white has-text-weight-medium">Login</a>
+                    <a href="" class="navbar-item text-white has-text-weight-medium">Sign Up</a>
                 </div>
             </div>
         </nav>
     </section>
     <!--call to action-->
-    <section class="section background-1">
-        <div class="columns is-vcentered">
-            <div class="column is-4-desktop">
-                <h3>Get your finances in order</h3>
-                <p>With amazing tools and articles on finance, savefy is the best way to secure your financial future</p>
-                <button class="button">Sign Up Now</button>
+    <section class="section  cta-padding background-1">
+        <div class="container columns is-vcentered">
+            <div class="column is-4-desktop cta-spacing">
+                <h3 class="is-size-1 mb-3 has-text-white">Get your finances in order</h3>
+                <p class="is-size-5 mb-3 has-text-white">With amazing tools and articles on finance, savefy is the best
+                    way to secure your financial future</p>
+                <button class="button has-text-centered btn-cta mt-3 is-large">Sign Up Now</button>
             </div>
             <div class="column ml is-6-desktop">
                 <!--svg-->
-                <img src="https://res.cloudinary.com/muneer/image/upload/v1611830231/undraw_wallet_aym5.svg" alt="finance wallet">
+                <img src="https://res.cloudinary.com/muneer/image/upload/v1611830231/undraw_wallet_aym5.svg"
+                    alt="finance wallet">
             </div>
         </div>
-       
-    </section>
-     <!--services-->
-    <section class="section">
-        <div>
 
+    </section>
+    <!--services-->
+    <section class="section services-background">
+        <h3 class="is-size-3 has-text-centered mb-6">Three Steps To Financial Freedom</h3>
+        <div class="container">
+            <div class="columns card-centered is-vcentered">
+                <div class="column is-3-desktop">
+                    <div class="card">
+                        <p class="card-header-title is-size-5 purple">Plan Money</p>
+                        <div class="card-content">
+                            <p>The future can be even brighter but a goal without a plan is just a wish. Use our tools
+                                to
+                                plan ahead for housing, education, retirement, family & a lot more.</p>
+                        </div>
+                        <footer class="card-footer">
+                            <a href="#" class="card-footer-item purple">Learn More</a>
+                        </footer>
+                    </div>
+                </div>
+                <div class="column  is-3-desktop">
+                    <div class="card">
+
+                        <p class="card-header-title is-size-5 purple">Track Finances</p>
+
+                        <div class="card-content">
+                            <p>Ever wake up from a night out and wondered what happened to all your money? With our
+                                Track Expenses feature we can almost guarantee that it won't happen again.</p>
+                        </div>
+                        <footer class="card-footer">
+                            <a href="#" class="card-footer-item">Learn More</a>
+                        </footer>
+                    </div>
+                </div>
+                <div class="column is-3-desktop">
+                    <div class="card">
+                        <div class=" card-header-title">
+                            <p class="is-size-5">Blog</p>
+                        </div>
+
+
+                        <div class="card-content">
+                            <p>Have a look at our blog to learn about a wide range of topics on your journey to
+                                financial freedom. From stocks to crypto and Eurobnds, you bound to pick up a thing or
+                                two.</p>
+                        </div>
+                        <footer class="card-footer">
+                            <a href="#" class="card-footer-item">Learn More</a>
+                        </footer>
+                    </div>
+                </div>
+            </div>
         </div>
+
     </section>
     <script src="index.js"></script>
 </body>
