added new section

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                                 plan ahead for housing, education, retirement, family & a lot more.</p>
                         </div>
                         <footer class="card-footer">
-                            <a href="#" class="card-footer-item purple">Learn More</a>
+                            <a href="#" class="card-footer-item ">Learn More</a>
                         </footer>
                     </div>
                 </div>
@@ -89,8 +89,8 @@
                 </div>
                 <div class="column is-3-desktop">
                     <div class="card">
-                        <div class=" card-header-title">
-                            <p class="is-size-5">Blog</p>
+                        <div class=" card-header-title purple is-size-5">
+                            <p>Blog</p>
                         </div>
 
 
@@ -106,8 +106,10 @@
                 </div>
             </div>
         </div>
-
     </section>
+    <!--Start building your financial future in 5 minutes-->
+    
+    <section class="section"></section>
     <script src="index.js"></script>
 </body>
 
