added video stiil need to adjust content

--- a/index.html
+++ b/index.html
@@ -109,7 +109,33 @@
     </section>
     <!--Start building your financial future in 5 minutes-->
     
-    <section class="section"></section>
+    <section class="section background-2">
+        <div class="columns">
+            <div class="column">
+                <video autoplay loop src="https://res.cloudinary.com/muneer/video/upload/v1611830289/stonks.mp4">
+                </video>
+            </div>
+            <div class="column">
+               <div>
+                <h4>Start building your financial future in 5 minutes</h4>
+               </div> 
+               <div>
+                   <div>
+                       <span>Create Your Account</span>
+                       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi quaerat distinctio consequatur numquam maiores laboriosam tenetur rerum ullam adipisci ad.</p>
+                   </div>
+                   <div>
+                       <span>Input Your Plan</span>
+                       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse cupiditate quasi vitae doloremque quod, quaerat unde tenetur accusamus libero dignissimos.</p>
+                   </div>
+                   <div>
+                       <span>Plan Your Expenses</span>
+                       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni cumque perferendis veritatis maxime quo optio soluta a repellat necessitatibus dolore.</p>
+                   </div>
+               </div>
+            </div>
+        </div>
+    </section>
     <script src="index.js"></script>
 </body>
 
