service steps done

--- a/index.html
+++ b/index.html
@@ -108,31 +108,44 @@
         </div>
     </section>
     <!--Start building your financial future in 5 minutes-->
-    
+
     <section class="section background-2">
         <div class="columns">
-            <div class="column">
+            <div class="column is-5-desktop">
                 <video autoplay loop src="https://res.cloudinary.com/muneer/video/upload/v1611830289/stonks.mp4">
                 </video>
             </div>
-            <div class="column">
-               <div>
-                <h4>Start building your financial future in 5 minutes</h4>
-               </div> 
-               <div>
-                   <div>
-                       <span>Create Your Account</span>
-                       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi quaerat distinctio consequatur numquam maiores laboriosam tenetur rerum ullam adipisci ad.</p>
-                   </div>
-                   <div>
-                       <span>Input Your Plan</span>
-                       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse cupiditate quasi vitae doloremque quod, quaerat unde tenetur accusamus libero dignissimos.</p>
-                   </div>
-                   <div>
-                       <span>Plan Your Expenses</span>
-                       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni cumque perferendis veritatis maxime quo optio soluta a repellat necessitatibus dolore.</p>
-                   </div>
-               </div>
+            <div class="column ml2">
+                <div>
+                    <h3 class="is-size-3">Start building your financial future in 5 minutes</h3>
+                </div>
+                <!--body of text with border left, number and title on same level-->
+                <div>
+                    <div>
+                        <p class="number-line is-size-4">01</p>
+                        <h4 class="is-size-4">Create Your Account</h4>
+                        <div class="border-left">
+                            <p class="is-size-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni cumque perferendis
+                                veritatis maxime quo optio soluta a repellat necessitatibus dolore.</p>
+                        </div>
+                    </div>
+                    <div>
+                        <p class="number-line is-size-4">02</p>
+                        <h4 class="is-size-4">Input Your Plan</h4>
+                        <div class="border-left">
+                            <p class="is-size-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni cumque perferendis
+                                veritatis maxime quo optio soluta a repellat necessitatibus dolore.</p>
+                        </div>
+                    </div>
+                    <div>
+                        <p class="number-line is-size-4">03</p>
+                        <h4 class="is-size-4">Plan Your Expenses</h4>
+                        <div class="mlp">
+                            <p class="is-size-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni cumque perferendis
+                                veritatis maxime quo optio soluta a repellat necessitatibus dolore.</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
